<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/name_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_player_1_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/player_1_name"
        app:layout_constraintEnd_toStartOf="@+id/til_scoreboard_player_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/name_guideline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_player_1_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:enabled="false"
            android:focusable="false" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_player_2_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/player_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/til_scoreboard_player_1"
        app:layout_constraintTop_toTopOf="@id/name_guideline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_player_2_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:enabled="false"
            android:focusable="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/score_board_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.28" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_scoreboard_player_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="24dp"
        app:helperText="Player One Score Board"
        app:helperTextEnabled="true"
        app:layout_constraintBottom_toBottomOf="@+id/til_scoreboard_player_2"
        app:layout_constraintEnd_toStartOf="@+id/til_scoreboard_player_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/score_board_guideline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_player_1_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:enabled="false"
            android:focusable="false" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_scoreboard_player_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="16dp"
        app:helperText="Player Two Score Board"
        app:helperTextEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/til_scoreboard_player_1"
        app:layout_constraintTop_toTopOf="@id/score_board_guideline">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_player_2_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:enabled="false"
            android:focusable="false" />

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/playerBtnGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_score_player_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/score"
        app:layout_constraintEnd_toStartOf="@+id/btn_score_player_2"
        app:layout_constraintStart_toStartOf="@+id/til_scoreboard_player_1"
        app:layout_constraintTop_toBottomOf="@id/playerBtnGuideline" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_here_to_score"
        app:layout_constraintStart_toStartOf="@id/btn_score_player_1"
        app:layout_constraintTop_toBottomOf="@id/btn_score_player_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_score_player_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/score"
        app:layout_constraintEnd_toEndOf="@id/til_scoreboard_player_2"
        app:layout_constraintStart_toEndOf="@id/btn_score_player_1"
        app:layout_constraintTop_toBottomOf="@id/playerBtnGuideline" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_here_to_score"
        app:layout_constraintEnd_toEndOf="@id/btn_score_player_2"
        app:layout_constraintTop_toBottomOf="@id/btn_score_player_2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/start"
        app:layout_constraintEnd_toStartOf="@+id/btn_score_player_2"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toEndOf="@+id/btn_score_player_1"
        app:layout_constraintTop_toBottomOf="@+id/btn_score_player_2" />
</androidx.constraintlayout.widget.ConstraintLayout>
